--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,12 +24,26 @@ body{
 }
 
 #all{
-	width: 97%;
+	width: 100%;
 	margin: auto;
 	padding: 10px;
 	background-color: #FFF;
 	padding-bottom: 20px;
 }
+
+#container{
+	margin-top: 60px;
+}
+
+.bs-callout {
+			margin: 10px 0;
+			padding: 10px;
+			border-left: 2px solid #eee;
+}
+.bs-callout-info {
+	border-color: lightgrey;
+}
+
 #menu{
 	margin-bottom: 10px;
 	margin-left: 25px;
@@ -40,15 +54,6 @@ body{
 	margin: -5px;
 }
 
-/*
-#menu li:hover ul ul, li.over ul ul{
-	display: none;
-}
-
-#menu li:hover ul, li li:hover ul, li.over ul, li li.over ul {
-	display: block;
-}
-*/
 #menu a{
 	padding: 20px 50px 20px 50px;
 	text-decoration: none;
