--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,9 +10,23 @@ body{
 	font-family: 'Droid Sans', arial, serif;
 	font-size: 12px;
 	margin: 0px;
-	background-color: #F4F4F4;
 	padding: 20px;
+	
 }
+/*
+#all{
+	width: 100%;
+	background-image: url('../img/logo-bg.gif');
+	background-size:70% 70%;
+	-webkit-background-size: 70% 70%;
+	-o-background-size: 70% 70%;
+	-khtml-background-size: 70% 70%;
+	-moz-background-size: 70% 70%;
+	background-repeat: no-repeat;
+	background-position: center;
+	
+}
+*/
 
 #topo #logo{
 	margin-top: 10px;
